--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ compass:
   # an avatar or logo (optional)
   # logo: "/images/logo.png"
   # author will appear under the avatar (optional)
-  author: "Jason & Winnie"
+  author: "Jason & Win Nie"
   # tagline will appear under the title (optional)
-  tagline: "Jason & Winnie"
+  tagline: "Jason & Win Nie"
   # if include_content is true, the contents of the content.html include will be
   # added right above the generated item list, if present
   include_content: true
