--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ compass:
   # an avatar or logo (optional)
   # logo: "/images/logo.png"
   # author will appear under the avatar (optional)
-  author: "Jason & Win-Nie"
+  author: "Jason & Winnie"
   # tagline will appear under the title (optional)
   tagline: "Jason & Win Nie"
   # if include_content is true, the contents of the content.html include will be
