--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,10 @@ baseurl: ''
 compass:
   # an avatar or logo (optional)
   logo: "/images/image.jpg"
+  logo1: "/images/00583-045.jpg"
+  logo2: "/images/00583-192.jpg"
+  logo3: "/images/00583-204.jpg"
+
   # author will appear under the avatar (optional)
   author: "Jason & Win Nie"
   # tagline will appear under the title (optional)
